src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Forwarded_From__c</fullName>
        <label>Forwarded From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gate_ID__c</fullName>
        <label>Gate ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate_Name__c</fullName>
        <label>Gate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway</label>
        <referenceTo>Gateway__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hang_Up_Reason__c</fullName>
        <label>Hang Up Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hang_Up__c</fullName>
        <label>Hang Up</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hashtag__c</fullName>
        <description>Contains a hashtag for this case used for creating a Chatter post in the internal support group. - DO NOT INCLUDE # -</description>
        <inlineHelpText>- DO NOT INCLUDE # - TEXT ONLY -</inlineHelpText>
        <label>Hashtag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Ticket_Number__c</fullName>
        <description>Optum&apos;s HPSM Case Number</description>
        <externalId>true</externalId>
        <label>IM Ticket Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Resolution_Comments__c</fullName>
        <label>IT Resolution Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IVR_Duration__c</fullName>
        <label>IVR Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impacted_Audience__c</fullName>
        <label>Impacted Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Member Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global UHC Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown/TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Case_Closer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Case Closer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Time__c</fullName>
        <label>Initial Response Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>$User.Id = OwnerId</formula>
        <label>IsOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Bug_Sub_Category__c</fullName>
        <label>Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>HIA, HRA, HSA, FRP, EPR fulfillment issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Card fulfillment issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forgot password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t log in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect email address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device or syncing issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse issue - myuhc account swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligibilty issue / Wrong affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Coin balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Mission check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biometrics missing/incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot proceed in health survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Privacy concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweepstakes fulfillment issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to change username</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken email/link/image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identity Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Insurance Cards/Policy #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation/Alteration Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Can&apos;t Confirm Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Bug__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile - Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile - iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally Age/Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewards - Coins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewards - Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewards - Auctions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewards - Donations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHR/Biometrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug - Tableau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug - Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report not delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc fulfillment request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General question/troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Management_Number__c</fullName>
        <label>Issue Management Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>EDI/Feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tool Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA__c</fullName>
        <label>JIRA</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Group_Name__c</fullName>
        <formula>Knowledge_Group__r.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Group</label>
        <referenceTo>Knowledge_Group__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <formula>IF(Category_Step_1__c = &quot;Syncing Issues&quot;,HYPERLINK(&quot;google.com&quot;,&quot;Google&quot;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message_Date__c</fullName>
        <label>Last Inbound Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Formula__c</fullName>
        <formula>IF(

NOT(ISBLANK(Last_Inbound_Message_Date__c)), Last_Inbound_Message_Date__c, LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name_Formula__c</fullName>
        <formula>IF(
NOT(ISBLANK(ContactId)), Contact.LastName, Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_No_Reply_Sent__c</fullName>
        <label>Last No Reply Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Support_Survey_Date__c</fullName>
        <label>Last Support Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Time_Based_Email_Sent_Date__c</fullName>
        <label>Last Time Based Email Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Item__c</fullName>
        <label>Link to Item</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Topic__c</fullName>
        <label>Live Agent Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syncing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Live_Agent_Transcript_Send_Email__c</fullName>
        <description>The email the transcript is to be sent to, if left blank it will default to the Contact Email associated to the case.</description>
        <inlineHelpText>The email the transcript is to be sent to, if left blank it will default to the Contact Email associated to the case.</inlineHelpText>
        <label>Live Agent Transcript Send Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Month_Closed__c</fullName>
        <formula>Case(Month(ClosedDateGMT__c),
1,&quot;01-Jan&quot;,
2,&quot;02-Feb&quot;,
3,&quot;03-Mar&quot;,
4,&quot;04-Apr&quot;,
5,&quot;05-May&quot;,
6,&quot;06-Jun&quot;,
7,&quot;07-Jul&quot;,
8,&quot;08-Aug&quot;,
9,&quot;09-Sep&quot;,
10,&quot;10-Oct&quot;,
11,&quot;11-Nov&quot;,
12,&quot;12-Dec&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Opened__c</fullName>
        <formula>Case(Month(CreatedDateGMT__c),
1,&quot;01-Jan&quot;,
2,&quot;02-Feb&quot;,
3,&quot;03-Mar&quot;,
4,&quot;04-Apr&quot;,
5,&quot;05-May&quot;,
6,&quot;06-Jun&quot;,
7,&quot;07-Jul&quot;,
8,&quot;08-Aug&quot;,
9,&quot;09-Sep&quot;,
10,&quot;10-Oct&quot;,
11,&quot;11-Nov&quot;,
12,&quot;12-Dec&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Opened</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Q2_Detractor__c</fullName>
        <formula>IF( 

OR( 
Q1_NPS_Score_Field__c = 0, 
Q1_NPS_Score_Field__c = 1, 
Q1_NPS_Score_Field__c = 2, 
Q1_NPS_Score_Field__c = 3, 
Q1_NPS_Score_Field__c = 4, 
Q1_NPS_Score_Field__c = 5, 
Q1_NPS_Score_Field__c = 6), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Q2 Detractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Q2_Protractor__c</fullName>
        <formula>IF( 

OR( 
Q2_NPS_Score_Field__c = 10, 
Q2_NPS_Score_Field__c = 9), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Q2 Protractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Comments__c</fullName>
        <label>NPS Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Taken_Date__c</fullName>
        <label>NPS Survey Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Taken__c</fullName>
        <description>Checkbox to determine is the NPS Survey was taken.</description>
        <formula>NOT(ISBLANK( Q1_NPS_Response_Score__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if NPS Survey was taken</inlineHelpText>
        <label>NPS Survey Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Incented_User_2__c</fullName>
        <formula>if(

OR(
Affiliation_Formula__c = &apos;BASE_CROSS_C_KNIGHT_CAP_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_CROSS_C_MENTOR_GRA_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_CROSS_C_NRG_ENERGY_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_CROSS_C_ORANGE_COU_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_QUALITY_OI_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_REGENERON_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_UHC_RICETEC_IN_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_RR_DONNELL_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_S._C._JOHN_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_SERVICE_WI_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_SOUTHWEST_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_UHC_SQUIRE_PAT_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_T-MOBILE_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_THE_NEW_YO_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_TMC_HEALTH_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_UNIVERSAL_NO_REWARD_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_VERIFONE_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_MYUHC_CNIREGHAPLUS_NONE&apos;,
Affiliation_Formula__c = &apos;ENGA_CROSS_C_NONE_THERMO_FIS_NO_REWARDS_NONE&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Incented User 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Incented_User__c</fullName>
        <formula>if(

OR(
Affiliation_Formula__c = &apos;base_uhc_myuhc_plus_coaching&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_MYUHC_CNI_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_MYUHC_CNIREGHA_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_ACUITY_BRA_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_ADECCO_DEFAULT_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_AMERITAS_H_DEFAULT_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_APPLE_INC_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_UHC_AVERY_DENN_DEFAULT_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_CROSS-C_BAYLOR_COL_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_CROSS-C_BLACK_&amp;_VE_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_CROSS_C_BROOKS_BRO_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_CATAMARAN,_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_CENTERPOIN_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_CROWLEY_MA_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_ERNST_&amp;_YO_DEFAULT_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_FIESTA_RES_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_CROSS_C_GODADDY.CO_NO_REWARDS_NONE&apos;, 
Affiliation_Formula__c = &apos;BASE_UHC_GOODWILL_I_NO_REWARDS_NONE&apos;,
Affiliation_Formula__c = &apos;BASE_UHC_GRANGE_MUT_NO_REWARDS_NONE&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Incented User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Case_Opens__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Case Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_End_Date__c</fullName>
        <label>Open Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <picklist>
            <picklistValues>
                <fullName>Benefits eligibility questions (Medical Dental Vision H S A/HRA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits eligibility questions (Life and Disability)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates questions/confirmations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Election confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to add/remove a dependent</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Optum_Case_Number__c</fullName>
        <label>Optum Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optum_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Escalated Optum Shared case.</description>
        <inlineHelpText>Escalated Optum Shared case.</inlineHelpText>
        <label>Optum Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optum_Open_Date__c</fullName>
        <description>The date that this shared case was opened on the Optum side.</description>
        <inlineHelpText>The date that this shared case was opened on the Optum side.</inlineHelpText>
        <label>Optum Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optum_Origin__c</fullName>
        <description>Origin from Optum Shared cases.</description>
        <inlineHelpText>Origin from Optum Shared cases.</inlineHelpText>
        <label>Optum Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Web Form - Client Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Case - CSM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Optum_Routing__c</fullName>
        <label>Optum Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Optum_shared_case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is the checkbox which identifies the optum shared case</inlineHelpText>
        <label>Optum shared case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin_Formula__c</fullName>
        <formula>IF(
NOT(ISBLANK(Original_Origin__c)), Original_Origin__c, TEXT(Origin))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Origin__c</fullName>
        <description>Holds the initial Origin value put on the case when it was inserted.</description>
        <inlineHelpText>Holds the initial Origin value put on the case when it was inserted.</inlineHelpText>
        <label>Original Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Sent password reset or walked through password reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually reset password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected or provided customer&apos;s email address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issued Coins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User education - website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User education - mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed - Unlink and relinked device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not fix - Third-party app shows activity, but not reflecting on Rally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not fix - Device will not connect to Rally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not fix - Device is connected, but will not sync with Rally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated to Tier 2 - Broken email/link/image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated to Tier 2 - Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated to Tier 2 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Optum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to BCBSSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to GWL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t want to log in every time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confusion about app activity steps vs Rally Missions/Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsupported device request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructions unclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on user</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Bucket__c</fullName>
        <formula>IF(

NOT(ISBLANK(Owner:User.Id)), Owner:User.Division, &apos;Queue Owned&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Ticket_Number__c</fullName>
        <description>Escalated ticket impacting multiple users on Optum side</description>
        <externalId>true</externalId>
        <label>PM Ticket Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Number__c</fullName>
        <formula>Parent.CaseNumber</formula>
        <label>Parent Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner3__c</fullName>
        <label>Partner - Delete</label>
        <picklist>
            <picklistValues>
                <fullName>Optum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Alliance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Formula__c</fullName>
        <formula>IF(

Contact.Partner_lookup__c  &lt;&gt; null,  Contact.Partner_lookup__r.Name ,

IF(

Partner_Lookup__c &lt;&gt; null, Partner_Lookup__r.Name,

IF(

NOT(ISBLANK(TEXT(Partner__c))), TEXT(Partner__c), 

IF(

AND(
NOT(ISBLANK(Contact.Affiliation__c)),
OR(
CONTAINS(Contact.Affiliation__c, &apos;uhc&apos;),
CONTAINS(Contact.Affiliation__c, &apos;optum&apos;))), &apos;Optum&apos;,

IF(

AND(
NOT(ISBLANK(Contact.Affiliation__c)),
CONTAINS(Contact.Affiliation__c, &apos;bcbssc&apos;)), &apos;BCBS South Carolina&apos;,

&apos;Unknown&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner - Delete</label>
        <picklist>
            <picklistValues>
                <fullName>BCBS South Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great West Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Alliance Medical Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Wellness Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally Marketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Univera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>